fixes color circle being squished on some sites

--- a/app/components/metatip.css
+++ b/app/components/metatip.css
@@ -55,6 +55,7 @@
     }
 
     & span[color] {
+      display: inline-block;
       width: 0.6rem;
       height: 0.6rem;
       border-radius: 50%;
